# rse-competencies-toolkit-webapp

./: .dockerignore  .eslintrc.js  .gitignore  .markdown-link-check.json  .mlc_config.json  .pre-commit-config.yaml  .prettierignore  .stylelintrc.json  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  dev-requirements.txt  doc-requirements.txt  docker-compose.yml  manage.py  mkdocs.yml  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  technical_work.md
.github/workflows/: auto-merge.yml  check-links.yml  ci.yml  docs.yml  publish.yml
docs/: gen_ref_nav.py
docs/reference/: SUMMARY.md
docs/reference/rse_competencies_toolkit/: index.md
main/: __init__.py  admin.py  apps.py  forms.py  models.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_skilllevel.py  0003_category.py  0004_skill.py  0005_userskill.py  __init__.py
main/static/: manifest.json
main/static/assets/css/: theme.css  theme.css.map  theme.min.css  theme.min.css.map  vendor.bundle.css
main/static/assets/icons/: around-icons.min.css
main/static/assets/js/: main.js  main.js.map  main.min.js  main.min.js.map  theme-switcher.js  theme.js  theme.js.map  theme.min.js  theme.min.js.map  vendor.bundle.js  vendor.bundle.js.map
main/static/assets/json/: animation-404-dark.json  animation-404-light.json  animation-soundwave.json  (+2 more)
main/templates/main/: base.html  index.html  privacy.html
main/templates/registration/: create_user.html  logged_out.html  login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  password_reset_subject.txt
node/src/js/: theme.js
node/src/scss/: _utilities.scss
rse_competencies_toolkit/: __init__.py  __main__.py  asgi.py  settings.py  urls.py  wsgi.py
rse_competencies_toolkit/settings/: __init__.py  _production.py  _production_ncl_azure.py  settings.py
tests/: conftest.py  test_imports.py  test_rse_competencies_toolkit.py  test_views.py
tests/main/: test_main_views.py  test_registration_views.py  test_views.py  view_utils.py
(+16 files in other folders)
